# One-Billion-Row-Challenge-Python

./: .gitignore  README.md  pyproject.toml
src/: create_measurements.py  using_duckdb.py  using_pandas.py  using_python.py
